---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: ???
  Bug fixes:
    - Fixed equipment quality overlays
    - Fixed recycling of certain items
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023.11.12
  Changes:
    - Allow for 2x modules in AM3 to allow 2x prod/eff modules
    - More visible quality overlays
  Bug fixes:
    - Fixed normal productivity modules not working for higher quality recipes
    - Support creative-mod
    - Fixed dark_background_icons on quality
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023.11.11
  Bug fixes:
    - Fixed "items with no sa bonus" causing crash due to missing quality upgrades
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023.11.11
  Bug fixes:
    - Fixed higher quality quality enhancing machines losing quality when mined
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2023.11.11
  Changes:
    - Faster startup
    - Support for fast replace and upgrades between quality entities
  Bug fixes:
    - Fix for upgrade planner jumping qualities
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2023.11.09
  Changes:
    - Recipes are now unlocked more gradually
    - Simple modding interface by a string in mod settings
  Bug fixes:
    - Removed quality of default recipes that unlocked prematurely
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2023.11.09
  Changes:
    - Recipe unlocks are now organized into hidden technologies
    - Better quality probabilities description
    - Some extra non-SA bonuses