@@ -26,6 +26,8 @@ programming=Program __1__ from parts
 deprogramming=Deprogram __1__ to parts
 recycling=Recycling __1__
 recycler=Recycler
+deleveling=Deleveling __1__
+deleveler=Deleveler
 not-enough-modules=Not enough modules to upgrade machine
 missing-quality-module-upgrade=Quality upgrade for module __1__ not supported
 too-many-existing-modules=Can't add quality to machine with too many existing modules
@@ -34,7 +36,7 @@ qual-description=[font=default-semibold][color=255,230,192]Quality probabilities
 qual-line=[img=jq_quality_icon___1__] → __2__\n
 qual-percent=[img=jq_quality_icon___2__]__1__%
 cant-recycle=Item __1__ can't be recycled
-stupid-fix='
+cant-delevel=Item __1__ can't be deleveled
 
 [tips-and-tricks-item-name]
 jq-quality=Quality and quality modules
